<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        app:layout_constraintBottom_toTopOf="@id/ll_buttons"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fl_btn"
            android:backgroundTint="@color/orange"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"
            android:text="next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/text_view"
            android:layout_marginHorizontal="24dp"
            android:layout_gravity="bottom|end"
            android:textColor="@color/white"
            android:textSize="80sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/result_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </FrameLayout>

    <LinearLayout
        android:layout_marginBottom="8dp"
        android:id="@+id/ll_buttons"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:paddingHorizontal="10dp"
            android:paddingVertical="6dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_ac"
                android:onClick="onNumberClick"
                android:text="@string/clean_all"
                style="@style/Gray.Button" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_plus_minus"
                android:layout_marginHorizontal="14dp"
                android:text="@string/btn_plus_minus"
                style="@style/Gray.Button" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_percent"
                android:onClick="onOperationClick"
                android:text="@string/btn_percent"
                android:layout_marginEnd="14dp"
                style="@style/Gray.Button" />
            <com.google.android.material.button.MaterialButton
                android:onClick="onOperationClick"
                android:id="@+id/btn_division"
                android:text="@string/btn_division"
                style="@style/Orange.Button."/>

        </LinearLayout>
        <LinearLayout
            android:paddingHorizontal="10dp"
            android:paddingVertical="6dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_seven"
                android:onClick="onNumberClick"
                android:text="@string/btn_seven"
                style="@style/Dark.Gray.Button" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_eight"
                android:onClick="onNumberClick"
                android:layout_marginHorizontal="14dp"
                android:text="@string/btn_eight"
                style="@style/Dark.Gray.Button" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_nine"
                android:onClick="onNumberClick"
                android:text="@string/btn_nine"
                android:layout_marginEnd="14dp"
                style="@style/Dark.Gray.Button" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_multiple"
                android:onClick="onOperationClick"
                android:text="@string/btn_multiple"
                style="@style/Orange.Button."/>

        </LinearLayout>
        <LinearLayout
            android:paddingHorizontal="10dp"
            android:paddingVertical="6dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_four"
                android:onClick="onNumberClick"
                android:text="@string/btn_four"
                style="@style/Dark.Gray.Button" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_five"
                android:onClick="onNumberClick"
                android:layout_marginHorizontal="14dp"
                android:text="@string/btn_five"
                style="@style/Dark.Gray.Button" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_six"
                android:onClick="onNumberClick"
                android:text="@string/btn_six"
                android:layout_marginEnd="14dp"
                style="@style/Dark.Gray.Button" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_minus"
                android:onClick="onOperationClick"
                android:text="@string/btn_minus"
                style="@style/Orange.Button."/>

        </LinearLayout>
        <LinearLayout
            android:paddingHorizontal="10dp"
            android:paddingVertical="6dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_one"
                android:onClick="onNumberClick"
                android:text="@string/btn_one"
                style="@style/Dark.Gray.Button" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_two"
                android:onClick="onNumberClick"
                android:layout_marginHorizontal="14dp"
                android:text="@string/btn_two"
                style="@style/Dark.Gray.Button" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_three"
                android:onClick="onNumberClick"
                android:text="@string/btn_three"
                android:layout_marginEnd="14dp"
                style="@style/Dark.Gray.Button" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_plus"
                android:onClick="onOperationClick"
                android:text="@string/btn_plus"
                style="@style/Orange.Button."/>

        </LinearLayout>
        <LinearLayout
            android:paddingHorizontal="10dp"
            android:paddingVertical="6dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_zero"
                android:onClick="onNumberClick"
                android:textAlignment="textStart"
                android:paddingStart="32dp"
                android:layout_width="172dp"
                android:text="@string/btn_zero"
                style="@style/Dark.Gray.Button" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_point"
                android:text="@string/btn_point"
                android:layout_marginHorizontal="14dp"
                style="@style/Dark.Gray.Button" />
            <com.google.android.material.button.MaterialButton
                android:onClick="onOperationClick"
                android:id="@+id/btn_equal"
                android:text="@string/btn_equal"
                style="@style/Orange.Button."/>

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>